[gd_scene load_steps=2 format=3 uid="uid://131xnbym8j0t"]

[ext_resource type="Script" path="res://scripts/store.gd" id="1_a132c"]

[node name="Store" type="Node2D"]
script = ExtResource("1_a132c")

[node name="HealthUp" type="Button" parent="."]
offset_left = 71.0
offset_top = 208.0
offset_right = 1071.0
offset_bottom = 326.0
theme_override_font_sizes/font_size = 55
text = "Buy Health Increase (2 coins)"
metadata/_edit_use_anchors_ = true

[node name="DmgUp" type="Button" parent="."]
offset_left = 74.0
offset_top = 362.0
offset_right = 1074.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 55
text = "Buy Damage Increase (2 coins)"
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 391.0
offset_right = 758.0
offset_bottom = 184.0
theme_override_font_sizes/normal_font_size = 111
text = "STORE"

[node name="skip" type="Button" parent="."]
offset_left = 406.0
offset_top = 548.0
offset_right = 747.0
offset_bottom = 632.0
theme_override_font_sizes/font_size = 55
text = "NEXT"

[connection signal="button_down" from="HealthUp" to="." method="_on_health_up_button_down"]
[connection signal="button_down" from="DmgUp" to="." method="_on_dmg_up_button_down"]
[connection signal="button_down" from="skip" to="." method="_on_skip_button_down"]
